--- a/info2.html
+++ b/info2.html
@@ -125,7 +125,7 @@
                 <div class="card-header" id="headingThree">
                   <h5 class="mb-0">
                     <button class="btn btn-neutral collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      J
+                      Javascript
                     </button>
                   </h5>
                 </div>
