--- a/info2.html
+++ b/info2.html
@@ -50,7 +50,7 @@
           <span class="navbar-toggler-bar bar3"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="projeto2.html">
+          <a class="navbar-brand" href="index.html">
             <img src="LOGO_GUIA_CEFET.png" alt="" width="200" height="32" title="Compass">
           </a>
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -59,9 +59,9 @@
                 Home
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="projeto2.html">Sobre o Curso</a>
-                <a class="dropdown-item" href="projeto2.html">Orientadores</a>
-                <a class="dropdown-item" href="projeto2.html">Membros</a>
+                <a class="dropdown-item" href="index.html">Sobre o Curso</a>
+                <a class="dropdown-item" href="index.html">Orientadores</a>
+                <a class="dropdown-item" href="index.html">Membros</a>
               </div>
             </li>
             <li class="nav-item dropdown">
