--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 
     <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
     <script src="now-ui-kit-master\assets\js\now-ui-kit.min.js" type="text/javascript"></script>
-    <script src="projeto2.js" type="text/javascript"></script>
     
   </head>
   <body>
@@ -51,7 +50,7 @@
           <span class="navbar-toggler-bar bar3"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="projeto2.html">
+          <a class="navbar-brand" href="index.html">
             <img src="LOGO_GUIA_CEFET.png" alt="" width="200" height="32" title="Compass">
           </a>
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0 justify-content-end">
