--- a/info2.html
+++ b/info2.html
@@ -96,7 +96,7 @@
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
                     <button class="btn btn-neutral" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                     Introdução a Informática
+                      <b>Introdução a Informática</b>
                     </button>
                   </h5>
                 </div>
@@ -111,7 +111,7 @@
                 <div class="card-header" id="headingTwo">
                   <h5 class="mb-0">
                     <button class="btn btn-neutral collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Java
+                      <b>Java</b> 
                     </button>
                   </h5>
                 </div>
@@ -125,7 +125,7 @@
                 <div class="card-header" id="headingThree">
                   <h5 class="mb-0">
                     <button class="btn btn-neutral collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Javascript
+                      <b>Javascript</b>
                     </button>
                   </h5>
                 </div>
