--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                 Home
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#Sobre">Sobre o Site</a>
                 <a class="dropdown-item" href="#Orientadores">Orientadores</a>
                 <a class="dropdown-item" href="#Membros">Membros</a>
               </div>
@@ -84,7 +83,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 order-md-1 text-center text-md-left pr-md-5">
-            <h2 class="mb-3 text-texto" id="Sobre">Objetivo do Site:</h2>
+            <h2 class="mb-3 text-texto">Objetivo do Site:</h2>
             <p class="lead"> 
               Com esse site, queremos que o usuário que pretende entrar no CEFET/RJ Campus Maracanã, consiga visualizar de uma forma mais interativa e acessível, sobre o que cada curso aborda. 
               Assim, em cada pagina de cada curso, mostraremos a grade, bem como um video explicando como será sua experiência no CEFET/RJ.
