--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="icon cefet.png">
     <link rel="icon" type="image/png" href="icon cefet.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Guia CEFET/RJ</title>
+    <title>Guide CEFET/RJ</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 
     <!--     Fonts and icons     -->
