--- a/Site/inner-page.html
+++ b/Site/inner-page.html
@@ -51,17 +51,10 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#features">Campus</a>
-            <ul>
-              <li><a href="#">Maracana</a></li>
-              <li><a href="#">Angra dos Reis</a></li>
-              <li><a href="#">Maria da Graça</a></li>
-              <li><a href="#">Nova Iguaçu</a></li>
-            </ul>
-          </li>
+          <li><a href="#features">Endereços</a></li>
+          <li><a href="#advanced-features">Campi</a></li>
           <li><a href="#pricing">Perguntas Frequentes</a></li>
           <li><a href="#team">Team</a></li>
-          <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -72,25 +65,9 @@
   <section id="intro">
 
     <div class="intro-text">
-      <h2>Welcome to GuiaCEFET</h2>
+      <h2> <strong>Welcome to GuiaCEFET</strong></h2>
       <p>We are team of talanted designers making websites with Bootstrap</p>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
-    </div>
-
-    <div class="product-screens">
-
-      <div class="product-screen-1 wow fadeInUp" data-wow-delay="0.4s" data-wow-duration="0.6s">
-        <img src="assets/img/product-screen-1.png" alt="">
-      </div>
-
-      <div class="product-screen-2 wow fadeInUp" data-wow-delay="0.2s" data-wow-duration="0.6s">
-        <img src="assets/img/product-screen-2.png" alt="">
-      </div>
-
-      <div class="product-screen-3 wow fadeInUp" data-wow-duration="0.6s">
-        <img src="assets/img/product-screen-3.png" alt="">
-      </div>
-
     </div>
 
   </section><!-- End Intro Section -->
@@ -156,7 +133,7 @@
 
           <div class="col-lg-8 offset-lg-4">
             <div class="section-header wow fadeIn" data-wow-duration="1s">
-              <h3 class="section-title">Campus</h3>
+              <h3 class="section-title">Endereços</h3>
               <span class="section-divider"></span>
             </div>
           </div>
@@ -171,26 +148,37 @@
 
               <div class="col-lg-6 col-md-6 box wow fadeInRight">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
-                <h4 class="title"><a href="link para o maps">Maracanã</a></h4>
+                <h4 class="title">
+                  <a target="_blank" style="text-decoration: underline; color: #679e96;"
+                    href="https://www.google.com.br/maps/place/CEFET-RJ/@-22.9124722,-43.2269618,17z/data=!3m1!4b1!4m5!3m4!1s0x997e58277f6197:0xbcccee561098f3b6!8m2!3d-22.9124772!4d-43.2247731">
+                    Maracanã
+                  </a>
+                </h4>
                 <p class="description">Endereço: Voluptatum deleniti atque corrupti quos dolores et quas molestias
                   excepturi sint
                   occaecati cupiditate non provident clarida perendo.</p>
               </div>
               <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.1s">
                 <div class="icon"><i class="ion-ios-flask-outline"></i></div>
-                <h4 class="title"><a href="">Angra dos Reis</a></h4>
+                <h4 class="title"><a target="_blank" style="text-decoration: underline; color: #679e96;"
+                    href="https://www.google.com.br/maps/place/CEFET%2FRJ+Campus+Angra+dos+Reis/@-23.0213964,-44.5383617,17z/data=!3m1!4b1!4m5!3m4!1s0x9daf4befee3017:0xf207fea35c95c5c5!8m2!3d-23.0214014!4d-44.536173">
+                    Angra dos Reis</a></h4>
                 <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                   commodo consequat tarad limino ata noble dynala mark.</p>
               </div>
               <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.2s">
                 <div class="icon"><i class="ion-social-buffer-outline"></i></div>
-                <h4 class="title"><a href="">Maria da Graça</a></h4>
+                <h4 class="title"><a target="_blank" style="text-decoration: underline; color: #679e96;"
+                    href="https://www.google.com.br/maps/place/CEFET%2FRJ+-+Campus+Maria+da+Gra%C3%A7a/@-22.8822552,-43.2610833,17z/data=!3m1!4b1!4m5!3m4!1s0x997c23a4ba47a7:0x5ef9188757a56706!8m2!3d-22.8822602!4d-43.2588946">
+                    Maria da Graça</a></h4>
                 <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                   fugiat nulla pariatur teleca starter sinode park ledo.</p>
               </div>
               <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.3s">
                 <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-                <h4 class="title"><a href="">Nova Iguaçu</a></h4>
+                <h4 class="title"><a target="_blank" style="text-decoration: underline; color: #679e96;"
+                    href="https://www.google.com.br/maps/place/Centro+Federal+de+Educa%C3%A7%C3%A3o+Tecnol%C3%B3gica+Celso+Suckow+da+Fonseca,+Campus+Nova+Igua%C3%A7u/@-22.705097,-43.4633181,17z/data=!4m12!1m6!3m5!1s0x99686d93f01acf:0x5201d88dbaa2884a!2sCEFET+UNED+NI!8m2!3d-22.705102!4d-43.4611294!3m4!1s0x99686d9c20f8c1:0x511ccb631bec108c!8m2!3d-22.7046558!4d-43.4624213">Nova
+                    Iguaçu</a></h4>
                 <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt mollit anim id est laborum dinoun trade capsule.</p>
               </div>
@@ -387,29 +375,143 @@
       </div>
     </section><!-- End Frequently Asked Questions Section -->
 
-
-    <!-- ======= Breadcrumbs Section ======= -->
-    <section class="breadcrumbs">
+    <!-- ======= Team Section ======= -->
+    <section id="team" class="section-bg">
       <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Inner Page</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Inner Page</li>
-          </ol>
+        <div class="section-header">
+          <h3 class="section-title">Our Team</h3>
+          <span class="section-divider"></span>
+          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+            doloremque</p>
         </div>
+        <div class="row wow fadeInUp">
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-1.jpg" alt=""></div>
+              <h4>Matheus Carregal</h4>
+              <span>Chief Executive Officer</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
 
-      </div>
-    </section><!-- End Breadcrumbs Section -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-2.jpg" alt=""></div>
+              <h4>Déborah Lemos</h4>
+              <span>Product Manager</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
 
-    <section class="inner-page">
-      <div class="container">
-        <p>
-          Example inner page template
-        </p>
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-3.jpg" alt=""></div>
+              <h4>Davi Ghiggino</h4>
+              <span>CTO</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-4.jpg" alt=""></div>
+              <h4>Rafael Chagas</h4>
+              <span>Accountant</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-4.jpg" alt=""></div>
+              <h4>Enzo Palácio</h4>
+              <span>Accountant</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-4.jpg" alt=""></div>
+              <h4>João Victor</h4>
+              <span>Accountant</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-4.jpg" alt=""></div>
+              <h4>Carmen</h4>
+              <span>Accountant</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-4.jpg" alt=""></div>
+              <h4>Tatiana</h4>
+              <span>Accountant</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-4.jpg" alt=""></div>
+              <h4>Renato Mauro</h4>
+              <span>Accountant</span>
+              <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </section>
+    </section><!-- End Team Section -->
 
   </main><!-- End #main -->
 
@@ -434,9 +536,6 @@
         <div class="col-lg-6">
           <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
             <a href="#intro" class="scrollto">Home</a>
-            <a href="#about" class="scrollto">About</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Use</a>
           </nav>
         </div>
       </div>
