Ajeitando as Ancoras

--- a/Site/inner-page.html
+++ b/Site/inner-page.html
@@ -51,8 +51,8 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#features">Endereços</a></li>
-          <li><a href="#advanced-features">Campi</a></li>
+          <li><a href="#endereco">Endereços</a></li>
+          <li><a href="#campi">Campi</a></li>
           <li><a href="#pricing">Perguntas Frequentes</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact Us</a></li>
@@ -126,7 +126,7 @@
 
 
     <!-- ======= Featuress Section ======= -->
-    <section id="features">
+    <section id="endereco">
       <div class="container">
 
         <div class="row">
@@ -193,7 +193,7 @@
     </section><!-- End Featuress Section -->
 
     <!-- ======= Advanced Featuress Section ======= -->
-    <section id="advanced-features">
+    <section id="campi">
 
       <div class="features-row section-bg">
         <div class="container">
